--- a/KretaDesktop/Localization/Resources/hu-HU/StringResources.xaml
+++ b/KretaDesktop/Localization/Resources/hu-HU/StringResources.xaml
@@ -1,6 +1,39 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:system="clr-namespace:System;assembly=mscorlib">
+    <!-- Menu -->
+    <system:String x:Key="menuTitle">Kréta</system:String>
+    <system:String x:Key="menuLists">Listák</system:String>
+    <!-- Header -->
+    <system:String x:Key="headerTitle">K R É T A  -  Iskolai adminisztrációs program</system:String>
+    <system:String x:Key="headerSubject">Tantárgyak</system:String>
+    
+    
+    <!-- TextBlock -->
+    <system:String x:Key="tbSorting">Rendezés:</system:String>
+    <system:String x:Key="tbSortingLowerCase">rendezés:</system:String>
+    <system:String x:Key="tbFiltring">Szűrés:</system:String>
+    <system:String x:Key="tbRowPerPage">Sor/oldal:</system:String>
+    <system:String x:Key="tbPage">Oldal:</system:String>
+
+    <!-- Button -->
+    <system:String x:Key="buttonSave">Mentés</system:String>
+    <system:String x:Key="buttonFind">Keresés</system:String>
+    <system:String x:Key="buttonFindAll">Összes</system:String>
+    <system:String x:Key="buttonNew">New</system:String>
+    <system:String x:Key="buttonSave">Save</system:String>
+    <system:String x:Key="buttonDelete">Delete</system:String>
+
+    <!-- Content -->
+    <!-- ContentListSubject -->
+    <system:String x:Key="contentListSubjectTitle">Tantárgyak</system:String>
+    <system:String x:Key="contentListSubjectProperties">Tantárgy adatai: </system:String>
+    
+    <!-- DataProperties -->
+    <system:String x:Key="id">Azon.</system:String>
+    <!-- Subject -->
+    <system:String x:Key="subjectName">Tantárgy név</system:String>
+        
     <!--
     https://tipsfordev.com/wpf-localization-multiple-languages-resourcedictionary-vs-resource-file-resx
     https://docs.microsoft.com/et-ee/dotnet/desktop/wpf/advanced/how-to-use-a-resourcedictionary-to-manage-localizable-string-resources?view=netframeworkdesktop-4.8
@@ -9,4 +42,6 @@
     <system:String x:Key="validationNameFirstLetterNotUppercase">A név nem nagybetűvel kezdődik!</system:String>
     <system:String x:Key="validationOtherLetterNotLowercase">A kezdőbetűk után kisbetűket írjon!</system:String>
     <system:String x:Key="validationNameOnlyLetters">A névben csak batűk lehetnek!</system:String>
+    
+  
 </ResourceDictionary>
