--- a/KretaDesktop/View/HeaderAppName.xaml
+++ b/KretaDesktop/View/HeaderAppName.xaml
@@ -7,6 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="{DynamicResource ContentBackgraoundColor}">
-        <Label FontSize="32" Margin="2 32 2 8" HorizontalAlignment="Center" Foreground="{DynamicResource ContentForegroundColor}">K R É T A  -  Iskolai adminisztrációs program</Label>
+        <Label FontSize="32" Margin="2 32 2 8" HorizontalAlignment="Center" Foreground="{DynamicResource ContentForegroundColor}">
+            </Label>
     </Grid>
 </UserControl>
