Menü jól működik

--- a/KretaDesktop/Localization/Resources/en-En/StringResources.xaml
+++ b/KretaDesktop/Localization/Resources/en-En/StringResources.xaml
@@ -4,6 +4,7 @@
     <!-- Menu -->
     <system:String x:Key="menuTitle">CRETA</system:String>
     <system:String x:Key="menuLists">Lists</system:String>
+    <system:String x:Key="menuOperation">Operation</system:String>
 
     <!-- Header -->
     <system:String x:Key="headerTitle">C R E T A - School administration programme</system:String>
