--- a/KretaDesktop/Resources/AppStyling.xaml
+++ b/KretaDesktop/Resources/AppStyling.xaml
@@ -9,4 +9,16 @@
     <SolidColorBrush x:Key="HeaderBackgroundColor" Color="#ff003f5c"></SolidColorBrush>
     <SolidColorBrush x:Key="ExpanderBackgroundColor" Color="#ff003f5c"></SolidColorBrush>
     <SolidColorBrush x:Key="NavigationBackgroundColor" Color="#ff003f5c"></SolidColorBrush>
+
+    <Style x:Key="HeaderAppTitle" TargetType="ContentControl">
+        <Setter Property="HorizontalAlignment" Value="Center"></Setter>
+        <Setter Property="FontSize" Value="32"></Setter>
+        <Setter Property="Foreground" Value="White"></Setter>
+        <Setter Property="Margin" Value="0 32 0 0"></Setter>
+    </Style>
+    <Style x:Key="HeaderMenu" TargetType="StackPanel">
+        <Setter Property="Orientation" Value="Horizontal"></Setter>
+        <Setter Property="HorizontalAlignment" Value="Left"></Setter>
+        <Setter Property="VerticalAlignment" Value="Center"></Setter>
+    </Style>
 </ResourceDictionary>
