Configuration menü és Exit menü működik

--- a/KretaDesktop/Localization/Resources/en-En/StringResources.xaml
+++ b/KretaDesktop/Localization/Resources/en-En/StringResources.xaml
@@ -5,6 +5,8 @@
     <system:String x:Key="menuTitle">CRETA</system:String>
     <system:String x:Key="menuLists">Lists</system:String>
     <system:String x:Key="menuOperation">Operation</system:String>
+    <system:String x:Key="menuConfiguration">Configuration</system:String>
+    <system:String x:Key="menuExit">Exit</system:String>
 
     <!-- Header -->
     <system:String x:Key="headerTitle">C R E T A - School administration programme</system:String>
