--- a/KretaDesktop/View/HeaderAppConfigurationView.xaml
+++ b/KretaDesktop/View/HeaderAppConfigurationView.xaml
@@ -6,7 +6,20 @@
              xmlns:local="clr-namespace:KretaDesktop.View"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
+    <Grid Background="{DynamicResource HeaderBackgroundColor}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="90"></RowDefinition>
+            <RowDefinition Height="30"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+        </Grid.RowDefinitions>
+        <ContentControl Grid.Row="0" Content="{DynamicResource headerTitle}" Style="{DynamicResource HeaderAppTitle}"></ContentControl>
+            <StackPanel Grid.Row="1" Style="{DynamicResource HeaderMenu}">
+                <Button Style="{DynamicResource HeaderButtonMenuItemEllpse}" 
+                            Command="{Binding}" 
+                            CommandParameter="Localization"
+                            Content="{DynamicResource headerLocalization}">
+                </Button>
+            </StackPanel>
+        <ContentControl Grid.Row="2" Content="{Binding SelectedView}"></ContentControl>
     </Grid>
 </UserControl>
