--- a/KretaDesktop/Resources/ViewModelViewDataTamplate.xaml
+++ b/KretaDesktop/Resources/ViewModelViewDataTamplate.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:views="clr-namespace:KretaDesktop.View"
+                    xmlns:viewscontent="clr-namespace:KretaDesktop.View.ContentView"
                     xmlns:viewmodels="clr-namespace:KretaDesktop.ViewModel"
                     xmlns:viewmodelscontent="clr-namespace:KretaDesktop.ViewModel.Content">
     <DataTemplate DataType="{x:Type viewmodels:HeaderAppNameViewModel}">
@@ -20,6 +21,6 @@
 
 
     <DataTemplate DataType="{x:Type viewmodelscontent:ContentListSubjectViewModel}">
-        <views:ContentListSubjectView></views:ContentListSubjectView>
+        <viewscontent:ContentListSubjectView></viewscontent:ContentListSubjectView>
     </DataTemplate>
 </ResourceDictionary>
