--- a/KretaDesktop/View/ContentView/ContentLocalizationView.xaml
+++ b/KretaDesktop/View/ContentView/ContentLocalizationView.xaml
@@ -11,16 +11,17 @@
         <viewmodel:ContentLocalizationViewModel></viewmodel:ContentLocalizationViewModel>
     </UserControl.DataContext>
     <Grid Background="{DynamicResource ContentBackgraoundColor}">
-        <StackPanel Orientation="Vertical">
-            <StackPanel Orientation="Horizontal">
+        <StackPanel Orientation="Vertical" Margin="0 32 0 0">
+            <StackPanel Orientation="Horizontal" Margin="12 0 0 0">
                 <Label Style="{DynamicResource FormLabel}" Content="{DynamicResource contentLocalizationCurrentLanguage}"></Label>
                 <Label Style="{DynamicResource FormLabel}" Content="{Binding CurrentLanguage}"></Label>
             </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <Label Style="{DynamicResource FormLabel}" Content="{DynamicResource contentLocalizationSelectLanguage}"></Label>
-                <ListBox Style="{DynamicResource FormListBox}" 
-                          ItemContainerStyle="{DynamicResource ListBoxItem}"
-                          ItemsSource="{Binding AllLanguage}"
+            <StackPanel Orientation="Horizontal" Margin="12 32 0 0">
+                <Label VerticalAlignment="Top" Style="{DynamicResource FormLabel}" Content="{DynamicResource contentLocalizationSelectLanguage}"></Label>
+                <ListBox VerticalAlignment="Top" Style="{DynamicResource FormListBox}" 
+                         ItemContainerStyle="{DynamicResource ListBoxItem}"
+                         ItemsSource="{Binding AllLanguage}"
+                         SelectedItem="{Binding SelectedLanguage}"
                           >
                 </ListBox>
             </StackPanel>
